--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,53 @@
+@inproceedings{martin2025evaluating,
+  title={Evaluating the Potential of Large Language Models in Security-Related Software Requirements Classification},
+  author={Murilo Martin and Daniel Coutinho and Anderson Uchôa and Juliana Alves Pereira},
+  booktitle={Proceedings of the 39th Brazilian Symposium on Software Engineering (SBES), 2025, Recife, Pernambuco, Brazil, September 22--26 2025},
+  pages={1--12},
+  year={2025},
+  abstract={An effective classification of security-related software requirements is essential to mitigate potential threats and ensure robust system design. This study investigates the accuracy of large language models (LLMs) in classifying security-related requirements compared to traditional machine learning (ML) methods. Using the SecReq and PROMISE+ datasets, we evaluated ten LLMs across various prompt engineering strategies. The results demonstrate that LLMs achieve high accuracy and outperform traditional ML models in several evaluation scenarios and that prompt engineering can significantly enhance the model's ability to identify security-related requirements. This work underscores the domain-generalization capabilities of LLMs and their potential to streamline requirements classification without the complexity of feature engineering or dataset-specific fine-tuning often required by ML approaches. Researchers, practitioners, and tool developers can leverage these findings to advance automated approaches in security requirements engineering.},
+}
+
+@inproceedings{uchoa2025clones,
+  title={An Exploratory Study on the Lifecycle of Code Clones during Code Review},
+  author={Italo Uchoa and Denis Sousa and Matheus Paixão and Pedro Maia and Anderson Uchôa and Chaiyong Ragkhitwetsagul},
+  booktitle={Proceedings of the 39th Brazilian Symposium on Software Engineering (SBES), 2025, Recife, Pernambuco, Brazil, September 22--26 2025},
+  pages={1--12},
+  year={2025},
+  abstract={The Modern Code Review (MCR) process is iterative and asynchronous, enabling early identification of several issues during software development. Overall, code review consists of inspecting code before merging it into the codebase. Code clones are code fragments that are copied and reused across different (or the same) codebases, often with minor changes. Developers must be aware of code clones in their projects, as issues in a cloned fragment may cause adjustments in all related clones, which can significantly impact the project's maintainability. Nevertheless, there is still a gap in research addressing the presence and behavior of code clones during code review. By leveraging the CROP dataset (with over 28k code reviews and 80k revisions) and the Siamese clone detector, we identified 27,656 relevant code clones that underwent code review in 6 different software systems. A manual validation of a representative sample indicated a predominance of Type-I (46.74%) and Type-III (45.3%) clones. Based on the clones' lifecycle within the review, we categorized the reviews into Single and Recurring, according to how the clones are introduced and/or removed during the review process. We identified 224 reviews for which clones appear in a single review (Single) and 1,258 reviews for which clones appear in multiple revisions (Recurring). Additionally, 236 code reviews lie at the intersection of Recurring and Single code reviews. To deepen the analysis, we introduced two metrics, Duration and Distance, to assess how clones are introduced or removed during the review. We observed that, on average, clones are often introduced at the beginning of the code review, commonly surviving the review process and being merged into the codebase.},
+}
+
+@inproceedings{patricio2025incivility,
+  title={404: Civility Not Found? Evaluating the Effectiveness of Small Language Models in Detecting Incivility in GitHub Conversations},
+  author={Mario Patrício and Silas Eufrásio and Anderson Uchôa and Lincoln S. Rocha and Daniel Coutinho and Juliana Alves Pereira and Matheus Paixão and Alessandro Garcia},
+  booktitle={Proceedings of the 39th Brazilian Symposium on Software Engineering (SBES), 2025, Recife, Pernambuco, Brazil, September 22--26 2025},
+  pages={1--12},
+  year={2025},
+  abstract={Context: Incivility in open-source software (OSS) platforms like GitHub can harm collaboration, discourage contributor participation, and impact code quality. Although current moderation tools based on Machine Learning (ML) and Natural Language Processing (NLP) offer some support, they often struggle to detect nuanced or implicit types of incivility. Goal: This study aims to assess the effectiveness of Small Language Models (SLMs) in detecting both coarse-grained (civil vs. uncivil) and fine-grained (specific types) incivility in GitHub conversations (issues and pull requests), and to understand how different prompting strategies influence detection performance. Method: We evaluate ten SLMs (3B-14B parameters) across five prompt strategies, on a labeled dataset with more than 6k GitHub conversations. We also compare the best-performing SLMs with five traditional ML models using two text-encoding techniques. Results: Our results reveal that SLMs perform well in detecting civil comments, but their effectiveness in detecting uncivil comments depends on model size. Models with 9B+ parameters (e.g., deepseek-r1, gpt-4o-mini) show improved performance on uncivil comments. For the fine-grained granularity, prompting strategy plays a critical role, with role-based prompting achieving the best results, particularly for implicit incivility types (e.g., Irony and Mocking), even when SLMs struggle with these types of incivility. Traditional ML models still perform well in explicit cases like Threat and Insulting. Conclusion: Our findings highlight the effectiveness of SLMs and prompt strategies in enhancing the detection of incivility within collaborative software development settings.},
+}
+
+@inproceedings{silva2025aunveiling,
+  title={Unveiling the Relationship Between Continuous Integration and Code Review: A Study with 10 Closed-source Projects},
+  author={Ruben Silva and Publio Silva and Carla Bezerra and Anderson Uchôa and Alessandro Garcia},
+  booktitle={Proceedings of the 39th Brazilian Symposium on Software Engineering (SBES), 2025, Recife, Pernambuco, Brazil, September 22--26 2025},
+  pages={1--12},
+  year={2025},
+  abstract={Companies have adopted Continuous Integration (CI) and Code Review (CR) as key practices to monitor and improve software quality continuously. These practices enable early detection and correction of issues and have shown promising results in open and closed-source projects. However, there is limited understanding of the relationship between CI and CR in closed-source environments. For instance, it remains unclear how CI practices influence CR (and vice versa) and to what extent bad CI practices hinder the CR process. To address this gap, we conducted a mixed-methods study involving ten closed-source projects developed by industry partners. We collected and analyzed 32 metrics related to CI and CR. In addition to the quantitative analysis, we gathered perceptions from project teams to (i) validate the identified correlations, (ii) explore the effects of bad CI practices on CR, and (iii) understand the perceived benefits and challenges of using CI and CR together. Our results revealed 23 correlations between CI and CR processes, leading to the following key findings: (i) the workload and execution time of CI can influence code review time; (ii) CI and CR execution times are more correlated when the processes occur sequentially; (iii) bad CI practices (such as long-lived branches, poor testing strategies, or complex build schemes) can negatively impact CR, causing delays, reviewer overload, and undetected issues; (iv) CI adds value to CR by anticipating problems, reducing manual tasks, and supporting the distribution of updates; and (v) the joint use of CI and CR presents challenges, such as ensuring code quality, resolving merge conflicts, and aligning processes. These findings shed light on the interplay between CI and CR and offer insights to improve their combined use in closed-source software development.},
+}
+
+@article{matos2025data,
+  title={Data Privacy in Software Practice: Brazilian Developers’ Perspectives},
+  author={Matos, Aryely and Patrício, Mario and Nicolau, Maria Isabel and Canedo, Edna Dias and Pereira, Juliana Alves and Uchôa, Anderson},
+  journal={Journal of Internet Services and Applications},
+  abstract={Data privacy is an essential principle of information security, aimed at protecting sensitive data from unauthorized access and information leaks. As software systems advance, the volume of personal information also grows exponentially. Therefore, incorporating privacy engineering practices during development is vital to ensure data integrity, confidentiality, and compliance with legal regulations, such as the General Data Protection Regulation (GDPR). However, there is a gap in understanding developers’ awareness of data privacy, their perceptions of the implementation of privacy strategies, and the influence of organizational factors on this adoption. Thus, this paper aims to explore the level of awareness among Brazilian developers regarding data privacy and their perceptions of the implementation strategies adopted to ensure data privacy. Additionally, we seek to understand how organizational factors influence the adoption of data privacy practices. To this end, we surveyed 88 Brazilian developers with privacy-related work experience. We got 21 statements grouped into three topics to measure the Brazilian developers’ awareness of data privacy in software. Our statistical analysis reveals substantial gaps between groups, e.g., developers have Direct v.s. Indirect data privacy-related work experience. We also reveal some data privacy strategies, e.g., Encryption, are both widely used and perceived as highly important, others, such as Turning off data collection, highlight strategies where ease of use does not necessarily lead to widespread adoption. Finally, we identified that the absence of dedicated privacy teams correlates with a lower perceived priority and less investment in tools. Even in organizations that recognize the importance of privacy. Our findings offer insights into how Brazilian developers perceive and implement data privacy practices, emphasizing the critical role organizational culture plays in decision-making regarding privacy. We hope that our findings will contribute to improving privacy practices within the software development community, particularly in contexts similar to Brazil.},
+  number={1},
+  year={2025},
+  month={Jun.},
+  volume={16},
+  url={https://journals-sol.sbc.org.br/index.php/jisa/article/view/5302},
+  DOI={10.5753/jisa.2025.5302},
+  pages={299–319}
+}
+
 @inproceedings{ferreira2025assessing,
   title={Assessing the Bug-Proneness of Refactored Code: A Longitudinal Multi-Project Study},
   author={Isabella Ferreira and Lawrence Arkoh and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia and Wesley K. G. Assunção},
