--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,30 @@
+@inproceedings{ribas2025pain,
+  title={Pain in a Safe Space: Temporal Analysis of Discourses in the Womenintech Subreddit},
+  author={Jessica Barbara da Silva Ribas and Joanne Carneiro and Theo Sousa and Júlia Azevedo and Jailma Januario da silva and Anderson Uchôa and Juliana Alves Pereira},
+  booktitle={Proceedings of the 39th Brazilian Symposium on Software Engineering (SBES), Insightful Ideas and Emerging Results Track, 2025, Recife, Pernambuco, Brazil, September 22--26 2025},
+  pages={1--7},
+  year={2025},
+  abstract={Women in Information Technology (IT) continue to face systemic barriers, including career stagnation, lack of recognition, workplace bias, and professional isolation. In response to these challenges and the absence of female peers with whom to share experiences, external support networks have emerged. One such space is the r/womenintech subreddit, which offers a dedicated and inclusive space for women in tech to exchange experiences, seek advice, and build community. This study investigates the discursive landscape of this subreddit by analyzing 2,367 posts published between April 2024 and April 2025. We applied a set of natural language processing (NLP) techniques, using the Twitter-based RoBERTa model, to conduct a multi-dimensional analysis that includes emotion detection, sentiment analysis, hate speech classification, irony detection, and offensive content identification. Our findings show that 99.9% of the posts are free of hate speech, reinforcing the subreddit’s role as a safe space for women in tech to share experiences. However, the predominance of neutral sentiment (48%) and the prevalence of the emotion Sadness (45%) reveal that the experiences reported are often distressing and unpleasant. In addition, we explore temporal trends in politically charged contexts of DEIA law. Our findings highlight the importance of better understanding the underlying structural and cultural factors that contribute to these emotions and open new directions for further analysis, e.g. including exploring the comments attached to each post.},
+}
+
+@inproceedings{gomes2025peacemakerbot,
+  title={PeacemakerBot: A LLM-Powered Bot for Identifying and Reducing Signs of Incivility in GitHub Conversations},
+  author={Antônio Gomes and Eric Mesquita and Emanuel Ávila and Carlos Jefté and Arthur Mesquita and Lucas Sousa and Matheus Rabelo and Mairieli Wessel and Anderson Uchôa},
+  booktitle={Proceedings of the 39th Brazilian Symposium on Software Engineering (SBES), Tools Track, 2025, Recife, Pernambuco, Brazil, September 22--26 2025},
+  pages={1--7},
+  year={2025},
+  abstract={Developers' interactions on collaborative software development platforms like GitHub are key to maintaining technical alignment and community engagement. However, uncivil behaviors such as disrespectful, sarcastic, or offensive comments can undermine these efforts, discouraging contributions and harming code quality. This study introduces PeacemakerBot, an automated moderation tool that detects and warns developers of incivility signs in GitHub conversations. We leverage Large Language Models (LLMs) to analyze conversations, identify signals of incivility, and generate reformulation suggestions in real time. To evaluate it, we conducted a user study with six developers, followed by a survey based on the Technology Acceptance Model (TAM) to understand their perception of the tool's usefulness. Our results suggest that PeacemakerBot successfully identifies multiple types of incivility and promotes more constructive conversations. The moderation feedback loop allows users to revise flagged comments, enhancing awareness and reducing harmful language over time. Our tool fills a key gap in OSS by providing AI-assisted moderation to enhance the social climate and inclusiveness of developer interactions. Video link: https://doi.org/10.5281/zenodo.15486009},
+}
+
+@inproceedings{sousa2025diversity,
+  title={Diversity Matters: Perceived Inclusion and Discrimination by Brazilian Tech Professionals},
+  author={Theo Sousa and Júlia Azevedo and Jessica Barbara da Silva Ribas and Anderson Uchôa and Larissa Rocha Soares Bastos and Juliana Alves Pereira},
+  booktitle={Proceedings of the 39th Brazilian Symposium on Software Engineering (SBES), 2025, Recife, Pernambuco, Brazil, September 22--26 2025},
+  pages={1--12},
+  year={2025},
+  abstract={Context: Diversity and inclusion are widely recognized as essential drivers of innovation in software engineering. However, systemic inequalities and implicit biases remain persistent challenges. Goal: This study aims to explore how tech professionals in Brazil perceive inclusion, discrimination, and unconscious bias in the workplace. Method: We surveyed 220 tech professionals, focusing on experiences of bias, perceptions of fairness, and the influence of organizational setting. Results: The findings reveal that 95.2% of women experienced sexism, compared to 70.3% of men; 77.1% of non-white professionals identify racism as a key issue, while 61.5% of disabled professionals report experiencing ableism. Hybrid work models were associated with the highest reports of sexism (80%), while employees at smaller companies reported more frequent instances of ableism than those at larger ones. Despite widespread acknowledgment of discrimination, only 23% of respondents explicitly recognized the presence of unconscious bias in themselves. While most see their teams as diverse, leadership inclusion lags, especially for disabled (25.9%) and neurodivergent (36.4%) professionals. Conclusion: These results reveal persistent equity gaps and call for  DEI (Diversity, Equity, and Inclusion) strategies in Brazil’s tech sector.},
+}
+
 @inproceedings{martin2025evaluating,
   title={Evaluating the Potential of Large Language Models in Security-Related Software Requirements Classification},
   author={Murilo Martin and Daniel Coutinho and Anderson Uchôa and Juliana Alves Pereira},
